Added title and benefits

--- a/index.html
+++ b/index.html
@@ -12,6 +12,34 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button class="theme-button"> Change Theme</button>
+    <h1> Art Painting </h1>
+    <h3>" Art is the only way to run away without leaving home."
+      <br/>
+      <em >Twyla Tharp</em>
+    </h3>
+    <div class="container">
+      <p>
+        Have you been considering learning to paint? Painting isn't just fun, 
+       it also provides a variety of health benefits. From sparking your own creative
+        grownth to unlocking better mental and emotional wellness, here are some of the 
+        benefits of painting you don't want to miss.
+      </p>
+      <div class="benefits">
+        <ul>
+         <li>◎ Painting promotes creative growth;</li>
+         <li>◎ Enhances problem-solving skills;</li>
+         <li>◎ Improves fine motor skills;</li>
+         <li>◎ Encourages positivity and offers stress relief;</li>
+         <li>◎ Boosts self-confidence;</li>
+        </ul>
+        <ul>
+         <li>◎ Painting improves memory, concentration and spatial awareness;</li>
+         <li>◎ Stimulates emotional awareness and growth;</li>
+         <li>◎ Offers a healthy challenge;</li>
+         <li>◎ Painting builds nonverbal communication skills.</li>
+        </ul>
+      </div>
+    </div>
 </body>
 </html>
