--- a/index.html
+++ b/index.html
@@ -41,5 +41,21 @@
         </ul>
       </div>
     </div>
+    <h2> Traditional Paintings</h2>
+    <a href="https://en.wikipedia.org/wiki/Painting" class="wiki-link" target="_blank" title="Learn more">☞ Find out more about painting on Wikipedia.</a>
+    <p class="my-work">Here are some pieces I realised using acrylic paint and brushes on canvas and ceramics. </p>
+    <div class="traditional-gallery">
+      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/597/original/vase-red.jpg?1665771726" class="red-vase" alt="Painted red gem on vase"/>
+      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/596/original/vase-green.jpg?1665771714" class="green-vase" alt="Painted green gem on vase"/>
+      <img src="
+      https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/594/original/seasons1.jpg?1665771685" class="seasons1-vase" alt="Painted seasons, lake reflection"/>
+      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/595/original/seasons2.jpg?1665771702" class="seasons2-vase" alt="Painted seasons, mountains"/>
+      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/592/original/lion-painting.png?1665771659"  class="lion-portret" alt="Lion portret"/>
+      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/591/original/koi-piggyBank.jpg?1665771640" class="koi-fish-side" alt="Engraved and painted koi fish"/>
+      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/598/original/wealth-piggyBank.jpg?1665771738" class="wealth-side" alt="Engraved chinese wealth symbol"/>
+      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/589/original/geisha1.jpg?1665771609" class="geisha1-vase" alt="Painted sitting geisha"/>
+      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/590/original/geisha2.jpg?1665771625" class="geisha2-vase" alt="Painted geisha near waterfall"/>
+    </div> 
+
 </body>
 </html>
