Added more painting images

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
       <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/589/original/geisha1.jpg?1665771609" class="geisha1-vase" alt="Painted sitting geisha"/>
       <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/590/original/geisha2.jpg?1665771625" class="geisha2-vase" alt="Painted geisha near waterfall"/>
     </div> 
-
+    <h2>Digital Paintings</h2>
+    <a href="https://en.wikipedia.org/wiki/Digital_painting" target="_blank" class="digital-wiki-link" title="Learn more">☞ Find out more about digital painting on Wikipedia.</a>
+    <p class="my-digital-pieces">These are my digital pieces I realised using Affinity Designer software.</p>
+     <div class="digital-gallery">
+      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/588/original/blueAffinityDesigner.jpg?1665771588" class="blue-birds" alt="Blue birds in Affinity Designer"/>
+      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/593/original/pearl-earringAffinity.png?1665771672" class="girl-portret" alt="Girl with a Pearl Earring in Affinity Designer"/>
+    </div> 
 </body>
 </html>
