Added ending quote

--- a/index.html
+++ b/index.html
@@ -63,5 +63,14 @@
       <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/588/original/blueAffinityDesigner.jpg?1665771588" class="blue-birds" alt="Blue birds in Affinity Designer"/>
       <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/593/original/pearl-earringAffinity.png?1665771672" class="girl-portret" alt="Girl with a Pearl Earring in Affinity Designer"/>
     </div> 
+    <h3 class="ending-quote">
+        " Everyone is an artist. Everyone is creative in their own way and that that creativity is a great thing. 
+        It's a human thing and it needs to be nurtured and it can help us go down life's path and help us to become deeper, richer, more satisfied human beings."
+        <br/>
+        <em> Rainn Wilson</em>
+      </h3>
+      <a href="https://www.brushandbubbles.com/pages/painting-tutorials" target="_blank"  class="learn-link" title="Painting for beginners">
+         Learn to paint
+     </a>
 </body>
 </html>
