--- a/index.html
+++ b/index.html
@@ -72,5 +72,9 @@
       <a href="https://www.brushandbubbles.com/pages/painting-tutorials" target="_blank"  class="learn-link" title="Painting for beginners">
          Learn to paint
      </a>
+     <footer>
+        Coded by 
+        <a href="https://nicoleserban1312.netlify.app/" target="_blank" class="coder" title="coder">Nicole Serban</a>
+        </footer>
 </body>
 </html>
