--- a/index.html
+++ b/index.html
@@ -45,23 +45,22 @@
     <a href="https://en.wikipedia.org/wiki/Painting" class="wiki-link" target="_blank" title="Learn more">☞ Find out more about painting on Wikipedia.</a>
     <p class="my-work">Here are some pieces I realised using acrylic paint and brushes on canvas and ceramics. </p>
     <div class="traditional-gallery">
-      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/597/original/vase-red.jpg?1665771726" class="red-vase" alt="Painted red gem on vase"/>
-      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/596/original/vase-green.jpg?1665771714" class="green-vase" alt="Painted green gem on vase"/>
-      <img src="
-      https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/594/original/seasons1.jpg?1665771685" class="seasons1-vase" alt="Painted seasons, lake reflection"/>
-      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/595/original/seasons2.jpg?1665771702" class="seasons2-vase" alt="Painted seasons, mountains"/>
-      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/592/original/lion-painting.png?1665771659"  class="lion-portret" alt="Lion portret"/>
-      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/591/original/koi-piggyBank.jpg?1665771640" class="koi-fish-side" alt="Engraved and painted koi fish"/>
-      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/598/original/wealth-piggyBank.jpg?1665771738" class="wealth-side" alt="Engraved chinese wealth symbol"/>
-      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/589/original/geisha1.jpg?1665771609" class="geisha1-vase" alt="Painted sitting geisha"/>
-      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/590/original/geisha2.jpg?1665771625" class="geisha2-vase" alt="Painted geisha near waterfall"/>
+      <img src="pictures/vase-red.jpg" class="red-vase" alt="Painted red gem on vase"/>
+      <img src="pictures/vase-green.jpg" class="green-vase" alt="Painted green gem on vase"/>
+      <img src="pictures/seasons1.jpg" class="seasons1-vase" alt="Painted seasons, lake reflection"/>
+      <img src="pictures/seasons2.jpg" class="seasons2-vase" alt="Painted seasons, mountains"/>
+      <img src="pictures/lion-painting.png"  class="lion-portret" alt="Lion portret"/>
+      <img src="pictures/koi-piggyBank.jpg" class="koi-fish-side" alt="Engraved and painted koi fish"/>
+      <img src="pictures/wealth-piggyBank.jpg" class="wealth-side" alt="Engraved chinese wealth symbol"/>
+      <img src="pictures/geisha1.jpg" class="geisha1-vase" alt="Painted sitting geisha"/>
+      <img src="pictures/geisha2.jpg" class="geisha2-vase" alt="Painted geisha near waterfall"/>
     </div> 
     <h2>Digital Paintings</h2>
     <a href="https://en.wikipedia.org/wiki/Digital_painting" target="_blank" class="digital-wiki-link" title="Learn more">☞ Find out more about digital painting on Wikipedia.</a>
     <p class="my-digital-pieces">These are my digital pieces I realised using Affinity Designer software.</p>
      <div class="digital-gallery">
-      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/588/original/blueAffinityDesigner.jpg?1665771588" class="blue-birds" alt="Blue birds in Affinity Designer"/>
-      <img src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/048/593/original/pearl-earringAffinity.png?1665771672" class="girl-portret" alt="Girl with a Pearl Earring in Affinity Designer"/>
+      <img src="pictures/blueAffinityDesigner.jpg" class="blue-birds" alt="Blue birds in Affinity Designer"/>
+      <img src="pictures/pearl-earringAffinity.png" class="girl-portret" alt="Girl with a Pearl Earring in Affinity Designer"/>
     </div> 
     <h3 class="ending-quote">
         " Everyone is an artist. Everyone is creative in their own way and that that creativity is a great thing. 
