Moved JavaScript file

--- a/index.html
+++ b/index.html
@@ -75,19 +75,6 @@
         Coded by 
         <a href="https://nicoleserban1312.netlify.app/" target="_blank" class="coder" title="coder">Nicole Serban</a>
      </footer>
-    <script>
-            function changeTheme(){
-              let body=document.querySelector("body");
-       
-              if(body.classList.contains("dark")){
-               body.classList.remove("dark");
-              }else{
-               body.classList.add("dark");
-              }
-            }
-       
-            let themeButton=document.querySelector(".theme-button");
-            themeButton.addEventListener("click", changeTheme);
-     </script>  
+    <script src="app.js"></script>
 </body>
 </html>
