Made page SEO friendly

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <meta name="description" content="Page about painting benefits, with examples of traditional and digital paintings and how to learn to paint link. "/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/design/style.css"/>
-    <title>Painting Hobby</title>
+    <title>Painting as a hobby</title>
 </head>
 <body>
     <button class="theme-button"> Change Theme</button>
@@ -42,25 +42,25 @@
       </div>
     </div>
     <h2> Traditional Paintings</h2>
-    <a href="https://en.wikipedia.org/wiki/Painting" class="wiki-link" target="_blank" title="Learn more">☞ Find out more about painting on Wikipedia.</a>
+    <a href="https://en.wikipedia.org/wiki/Painting" class="wiki-link" target="_blank" title="Learn more about traditional painting.">☞ Find out more about painting on Wikipedia.</a>
     <p class="my-work">Here are some pieces I realised using acrylic paint and brushes on canvas and ceramics. </p>
     <div class="traditional-gallery">
-      <img src="pictures/vase-red.jpg" class="red-vase" alt="Painted red gem on vase"/>
-      <img src="pictures/vase-green.jpg" class="green-vase" alt="Painted green gem on vase"/>
-      <img src="pictures/seasons1.jpg" class="seasons1-vase" alt="Painted seasons, lake reflection"/>
-      <img src="pictures/seasons2.jpg" class="seasons2-vase" alt="Painted seasons, mountains"/>
-      <img src="pictures/lion-painting.png"  class="lion-portret" alt="Lion portret"/>
-      <img src="pictures/koi-piggyBank.jpg" class="koi-fish-side" alt="Engraved and painted koi fish"/>
-      <img src="pictures/wealth-piggyBank.jpg" class="wealth-side" alt="Engraved chinese wealth symbol"/>
-      <img src="pictures/geisha1.jpg" class="geisha1-vase" alt="Painted sitting geisha"/>
-      <img src="pictures/geisha2.jpg" class="geisha2-vase" alt="Painted geisha near waterfall"/>
+      <img src="pictures/vase-red.jpg" class="red-vase" alt="Painted red gem on ceramic vase."/>
+      <img src="pictures/vase-green.jpg" class="green-vase" alt="Painted green gem on ceramic vase."/>
+      <img src="pictures/seasons1.jpg" class="seasons1-vase" alt="Painted seasons, lake reflection on ceramic vase."/>
+      <img src="pictures/seasons2.jpg" class="seasons2-vase" alt="Painted seasons, mountains on ceramic vase."/>
+      <img src="pictures/lion-painting.png"  class="lion-portret" alt="Lion portret, acrylic paint on canvas."/>
+      <img src="pictures/koi-piggyBank.jpg" class="koi-fish-side" alt="Engraved and painted koi fish on ceramic piggy bank."/>
+      <img src="pictures/wealth-piggyBank.jpg" class="wealth-side" alt="Engraved chinese wealth symbol on ceramic piggy bank."/>
+      <img src="pictures/geisha1.jpg" class="geisha1-vase" alt="Painted sitting geisha on ceramic vase."/>
+      <img src="pictures/geisha2.jpg" class="geisha2-vase" alt="Painted geisha near waterfall on ceramic vase."/>
     </div> 
     <h2>Digital Paintings</h2>
-    <a href="https://en.wikipedia.org/wiki/Digital_painting" target="_blank" class="digital-wiki-link" title="Learn more">☞ Find out more about digital painting on Wikipedia.</a>
+    <a href="https://en.wikipedia.org/wiki/Digital_painting" target="_blank" class="digital-wiki-link" title="Learn more about digital painting.">☞ Find out more about digital painting on Wikipedia.</a>
     <p class="my-digital-pieces">These are my digital pieces I realised using Affinity Designer software.</p>
      <div class="digital-gallery">
-      <img src="pictures/blueAffinityDesigner.jpg" class="blue-birds" alt="Blue birds in Affinity Designer"/>
-      <img src="pictures/pearl-earringAffinity.png" class="girl-portret" alt="Girl with a Pearl Earring in Affinity Designer"/>
+      <img src="pictures/blueAffinityDesigner.jpg" class="blue-birds" alt="Blue birds drawing in Affinity Designer software."/>
+      <img src="pictures/pearl-earringAffinity.png" class="girl-portret" alt="My version of the Girl with a Pearl Earring drawing in Affinity Designer."/>
     </div> 
     <h3 class="ending-quote">
         " Everyone is an artist. Everyone is creative in their own way and that that creativity is a great thing. 
@@ -68,7 +68,7 @@
         <br/>
         <em> Rainn Wilson</em>
       </h3>
-      <a href="https://www.brushandbubbles.com/pages/painting-tutorials" target="_blank"  class="learn-link" title="Painting for beginners">
+      <a href="https://www.brushandbubbles.com/pages/painting-tutorials" target="_blank"  class="learn-link" title="Discover more about painting for beginners.">
          Learn to paint
      </a>
      <footer>
